README, gitignore and cleanup

--- a/README.org
+++ b/README.org
@@ -1,111 +1,26 @@
 
-* Message protocol
+* tala
 
-   #+BEGIN_SRC clojure :results output code :exports none
-     ;; New client sends
-     {:m-type :init-user
-      :msg {#uuid "e6b4f79b-e781-46d3-9e0e-d38f583d1f04" {}}
-      :user-name "Username"
-      :user-id #uuid "djsakl-dakl-dkals"}
+  =M-x= =cider-jack-in-clj&cljs=
 
-     ;; Server responds to new client
-     {:m-type :init-user
-      :users {map with users}
-      :channels {map with channels}}
+  or use
 
-     ;; Server sends to all clients
-     {:m-type :new-user
-      :user-name "Username"
-      :user-id #uuid "djsakl-dakl-dkals"}
+  =lein clean && lein figwheel dev=
 
-     {:m-type :direct-message
-      :from-user-id #uuid "djsakl-dakl-dkals"
-      :to-user-id   #uuid "kljfsf-dakl-dkals"
-      :msg "Hejsan"}
+  Navigate to [[localhost:3449]]
 
-     {:m-type :channel-message
-      :user-id #uuid "djsakl-dakl-dkals"
-      :channel-id #uuid "sdljflks-jdlsjalsd-iewr-sdajlk"
-      :user-msg "Hey Channel"}
 
-     ;; Sends to all clients
-     {:m-type :user-left
-      :user-id #uuid "djsakl-dakl-dkals"}
-   #+END_SRC
+  To compile clojurescript to javascript:
 
-* User
-
-  #+BEGIN_SRC clojure :results output code :exports none
-    {#uuid "d06e0015-5c5a-4b34-8950-d18fa0582daf" {:user-name "Username"
-                                                   :user-id #uuid "d06e0015-5c5a-4b34-8950-d18fa0582daf"}}
-
+  #+BEGIN_SRC shell
+    lein clean
+    lein cljsbuild once min
   #+END_SRC
 
-* Datomic
 
-#+BEGIN_SRC shell :results output code :exports none
-bin/transactor config/samples/free-transactor-template.properties
-#+END_SRC
+  Production Build
 
-* md
-
-# tala
-
-A [re-frame](https://github.com/Day8/re-frame) application designed to ... well, that part is up to you.
-
-## Development Mode
-
-### Start Cider from Emacs:
-
-Put this in your Emacs config file:
-
-```
-(setq cider-cljs-lein-repl
-	"(do (require 'figwheel-sidecar.repl-api)
-         (figwheel-sidecar.repl-api/start-figwheel!)
-         (figwheel-sidecar.repl-api/cljs-repl))")
-```
-
-Navigate to a clojurescript file and start a figwheel REPL with `cider-jack-in-clojurescript` or (`C-c M-J`)
-
-### Run application:
-
-```
-lein clean
-lein figwheel dev
-```
-
-Figwheel will automatically push cljs changes to the browser.
-
-Wait a bit, then browse to [http://localhost:3449](http://localhost:3449).
-
-## Production Build
-
-```
-lein clean
-lein with-profile prod uberjar
-```
-
-That should compile the clojurescript code first, and then create the standalone jar.
-
-When you run the jar you can set the port the ring server will use by setting the environment variable PORT.
-If it's not set, it will run on port 3000 by default.
-
-To deploy to heroku, first create your app:
-
-```
-heroku create
-```
-
-Then deploy the application:
-
-```
-git push heroku master
-```
-
-To compile clojurescript to javascript:
-
-```
-lein clean
-lein cljsbuild once min
-```
+  #+BEGIN_SRC shell
+    lein clean
+    lein with-profile prod uberjar
+  #+END_SRC
